# may_minihttp-example

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  config.toml
assets/: index.html
src/: backend.rs  main.rs  route.rs
src/constants/: content.rs  http.rs  mod.rs
src/controllers/api/: check.rs  mod.rs  param.rs  path.rs  submit.rs  test.rs
src/functions/: utility.rs
src/plugins/: core.rs  mod.rs  plugin.rs  traits.rs
src/types/: item.rs  message.rs  mod.rs  status.rs
