[package]
name = "may_minihttp-example"
version = "0.0.1"
edition = "2024"

[dependencies]
buf-min = { version = "0.7.1", features = ["bytes"] } # required to integrates [ may, may_minihttp, yarte ]
bytes = "1.10.1"
futures = "0.3.31"
may = "0.3.49"
# may_minihttp = "0.1.11"
may_minihttp = { path = "vendors/may_minihttp-cap_vec_head" }
mime_guess = "2.0.5"
multer = "3.1.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
toml = "0.8.20"
url = "2.5.4"
yarte = { version = "0.15", features = ["bytes-buf", "json"] }
